Bug 387233 - Crash when toggling preview plugin from kate settings
Summary: Crash when toggling preview plugin from kate settings
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: plugin-preview (other bugs)
Version First Reported In: Git
Platform: Other Linux
: NOR crash
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-11-23 09:58 UTC by Elvis Angelaccio
Modified: 2017-11-30 02:23 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Elvis Angelaccio 2017-11-23 09:58:46 UTC
I can reproduce it every time:

1. Go to Kate Settings -> Plugins
2. Uncheck "Document Preview" entry
3. Check "Document Preview" entry -> crash

Stacktrace:

#0  0x00007fe748e9ea60 in QWidget::layout() const () from /usr/lib/libQt5Widgets.so.5
#1  0x00007fe7253061b3 in KTextEditorPreviewView::KTextEditorPreviewView (this=0x563df5a45f80, plugin=0x7fe730006390, 
    mainWindow=0x563df4e828f0) at ../addons/preview/ktexteditorpreviewview.cpp:47
#2  0x00007fe7253053fb in KTextEditorPreviewPlugin::createView (this=0x7fe730006390, mainwindow=0x563df4e828f0)
    at ../addons/preview/ktexteditorpreviewplugin.cpp:42
#3  0x0000563df2a3558c in KatePluginManager::enablePluginGUI (this=0x7ffd6e4990d8, item=0x563df4ea21e0, win=0x563df4e80640, config=0x0)
    at ../kate/katepluginmanager.cpp:224
#4  0x0000563df2a34fdd in KatePluginManager::enablePluginGUI (this=0x7ffd6e4990d8, item=0x563df4ea21e0) at ../kate/katepluginmanager.cpp:252
#5  0x0000563df2a90ec8 in KateConfigPluginPage::loadPlugin (this=0x563df5a5bcc0, item=0x563df5a6a7a0)
    at ../kate/kateconfigplugindialogpage.cpp:112
#6  0x0000563df2a90e26 in KateConfigPluginPage::stateChange (this=0x563df5a5bcc0, item=0x563df5a6a7a0, b=true)
    at ../kate/kateconfigplugindialogpage.cpp:98
#7  0x0000563df2a917c9 in QtPrivate::FunctorCall<QtPrivate::IndexesList<0, 1>, QtPrivate::List<KatePluginListItem*, bool>, void, void (KateConfigPluginPage::*)(KatePluginListItem*, bool)>::call (f=
    (void (KateConfigPluginPage::*)(KateConfigPluginPage * const, KatePluginListItem *, bool)) 0x563df2a90df0 <KateConfigPluginPage::stateChange(KatePluginListItem*, bool)>, o=0x563df5a5bcc0, arg=0x7ffd6e495740) at /usr/include/qt/QtCore/qobjectdefs_impl.h:136
#8  0x0000563df2a91713 in QtPrivate::FunctionPointer<void (KateConfigPluginPage::*)(KatePluginListItem*, bool)>::call<QtPrivate::List<KatePluginListItem*, bool>, void> (f=
    (void (KateConfigPluginPage::*)(KateConfigPluginPage * const, KatePluginListItem *, bool)) 0x563df2a90df0 <KateConfigPluginPage::stateChange(KatePluginListItem*, bool)>, o=0x563df5a5bcc0, arg=0x7ffd6e495740) at /usr/include/qt/QtCore/qobjectdefs_impl.h:169
#9  0x0000563df2a91636 in QtPrivate::QSlotObject<void (KateConfigPluginPage::*)(KatePluginListItem*, bool), QtPrivate::List<KatePluginListItem*, bool>, void>::impl (which=1, this_=0x563df5a8d400, r=0x563df5a5bcc0, a=0x7ffd6e495740, ret=0x0)
    at /usr/include/qt/QtCore/qobjectdefs_impl.h:398
#10 0x00007fe747977bbf in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/libQt5Core.so.5
#11 0x0000563df2a7d6b2 in KatePluginListView::stateChange (this=0x563df5a5cc80, _t1=0x563df5a6a7a0, _t2=true)
    at kate/kdeinit_kate_autogen/EWIEGA46WW/moc_kateconfigplugindialogpage.cpp:139
#12 0x0000563df2a90999 in KatePluginListView::stateChanged (this=0x563df5a5cc80, item=0x563df5a6a7a0)
    at ../kate/kateconfigplugindialogpage.cpp:63
#13 0x0000563df2a914e6 in QtPrivate::FunctorCall<QtPrivate::IndexesList<0>, QtPrivate::List<QTreeWidgetItem*>, void, void (KatePluginListView::*)(QTreeWidgetItem*)>::call (f=
    (void (KatePluginListView::*)(KatePluginListView * const, QTreeWidgetItem *)) 0x563df2a90950 <KatePluginListView::stateChanged(QTreeWidgetItem*)>, o=0x563df5a5cc80, arg=0x7ffd6e4959f0) at /usr/include/qt/QtCore/qobjectdefs_impl.h:136
#14 0x0000563df2a91443 in QtPrivate::FunctionPointer<void (KatePluginListView::*)(QTreeWidgetItem*)>::call<QtPrivate::List<QTreeWidgetItem*>, void> (f=
    (void (KatePluginListView::*)(KatePluginListView * const, QTreeWidgetItem *)) 0x563df2a90950 <KatePluginListView::stateChanged(QTreeWidget---Type <return> to continue, or q <return> to quit---
Item*)>, o=0x563df5a5cc80, arg=0x7ffd6e4959f0) at /usr/include/qt/QtCore/qobjectdefs_impl.h:169
#15 0x0000563df2a91366 in QtPrivate::QSlotObject<void (KatePluginListView::*)(QTreeWidgetItem*), QtPrivate::List<QTreeWidgetItem*>, void>::impl (which=1, this_=0x563df5a68410, r=0x563df5a5cc80, a=0x7ffd6e4959f0, ret=0x0) at /usr/include/qt/QtCore/qobjectdefs_impl.h:398
#16 0x00007fe747977bbf in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/libQt5Core.so.5
#17 0x00007fe749145411 in QTreeWidget::itemChanged(QTreeWidgetItem*, int) () from /usr/lib/libQt5Widgets.so.5
#18 0x00007fe747977a96 in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/libQt5Core.so.5
#19 0x00007fe7478e06ad in QAbstractItemModel::dataChanged(QModelIndex const&, QModelIndex const&, QVector<int> const&) ()
   from /usr/lib/libQt5Core.so.5
#20 0x00007fe74914612a in ?? () from /usr/lib/libQt5Widgets.so.5
#21 0x00007fe749149bb4 in QTreeWidgetItem::setData(int, int, QVariant const&) () from /usr/lib/libQt5Widgets.so.5
#22 0x00007fe7491455b6 in ?? () from /usr/lib/libQt5Widgets.so.5
#23 0x00007fe7490f3f20 in QStyledItemDelegate::editorEvent(QEvent*, QAbstractItemModel*, QStyleOptionViewItem const&, QModelIndex const&) ()
   from /usr/lib/libQt5Widgets.so.5
#24 0x00007fe7490ceb7d in ?? () from /usr/lib/libQt5Widgets.so.5
#25 0x00007fe7490d417b in QAbstractItemView::edit(QModelIndex const&, QAbstractItemView::EditTrigger, QEvent*) ()
   from /usr/lib/libQt5Widgets.so.5
#26 0x00007fe7490cedc1 in QAbstractItemView::mouseReleaseEvent(QMouseEvent*) () from /usr/lib/libQt5Widgets.so.5
#27 0x00007fe7491422e4 in QTreeView::mouseReleaseEvent(QMouseEvent*) () from /usr/lib/libQt5Widgets.so.5
#28 0x00007fe748eb5cc8 in QWidget::event(QEvent*) () from /usr/lib/libQt5Widgets.so.5
#29 0x00007fe748f599df in QFrame::event(QEvent*) () from /usr/lib/libQt5Widgets.so.5
#30 0x00007fe7490d80a4 in QAbstractItemView::viewportEvent(QEvent*) () from /usr/lib/libQt5Widgets.so.5
#31 0x00007fe749141b1d in QTreeView::viewportEvent(QEvent*) () from /usr/lib/libQt5Widgets.so.5
#32 0x00007fe747946f3c in QCoreApplicationPrivate::sendThroughObjectEventFilters(QObject*, QEvent*) () from /usr/lib/libQt5Core.so.5
#33 0x00007fe748e75d18 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQt5Widgets.so.5
#34 0x00007fe748e7dc91 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQt5Widgets.so.5
#35 0x00007fe747947270 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /usr/lib/libQt5Core.so.5
#36 0x00007fe748e7cc1a in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) () from /usr/lib/libQt5Widgets.so.5
#37 0x00007fe748ed1119 in ?? () from /usr/lib/libQt5Widgets.so.5
#38 0x00007fe748ed3830 in ?? () from /usr/lib/libQt5Widgets.so.5
#39 0x00007fe748e75d3c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQt5Widgets.so.5
#40 0x00007fe748e7d716 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQt5Widgets.so.5
#41 0x00007fe747947270 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /usr/lib/libQt5Core.so.5
#42 0x00007fe74866c644 in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) ()
   from /usr/lib/libQt5Gui.so.5
---Type <return> to continue, or q <return> to quit---
#43 0x00007fe74866e196 in QGuiApplicationPrivate::processWindowSystemEvent(QWindowSystemInterfacePrivate::WindowSystemEvent*) ()
   from /usr/lib/libQt5Gui.so.5
#44 0x00007fe748645c1c in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) ()
   from /usr/lib/libQt5Gui.so.5
#45 0x00007fe73a8f20bd in ?? () from /usr/lib/libQt5XcbQpa.so.5
#46 0x00007fe7479458bb in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#47 0x00007fe74906cc3b in QDialog::exec() () from /usr/lib/libQt5Widgets.so.5


#48 0x0000563df2a2d2ec in KateMainWindow::showPluginConfigPage (this=0x563df4e80640, configpageinterface=0x0, id=0)
    at ../kate/katemainwindow.cpp:790
#49 0x0000563df2a2d23b in KateMainWindow::slotConfigure (this=0x563df4e80640) at ../kate/katemainwindow.cpp:776
#50 0x0000563df2a7eb3c in KateMainWindow::qt_static_metacall (_o=0x563df4e80640, _c=QMetaObject::InvokeMetaMethod, _id=11, _a=0x7ffd6e497170)
    at kate/kdeinit_kate_autogen/EWIEGA46WW/moc_katemainwindow.cpp:400
#51 0x00007fe747977a96 in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/libQt5Core.so.5
#52 0x00007fe748e6f283 in QAction::triggered(bool) () from /usr/lib/libQt5Widgets.so.5
#53 0x00007fe748e71b06 in QAction::activate(QAction::ActionEvent) () from /usr/lib/libQt5Widgets.so.5
#54 0x00007fe748ff7a45 in ?? () from /usr/lib/libQt5Widgets.so.5
#55 0x00007fe748fff10c in ?? () from /usr/lib/libQt5Widgets.so.5
#56 0x00007fe749000014 in QMenu::mouseReleaseEvent(QMouseEvent*) () from /usr/lib/libQt5Widgets.so.5
#57 0x00007fe748eb5cc8 in QWidget::event(QEvent*) () from /usr/lib/libQt5Widgets.so.5
#58 0x00007fe74900233c in QMenu::event(QEvent*) () from /usr/lib/libQt5Widgets.so.5
#59 0x00007fe748e75d3c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQt5Widgets.so.5
#60 0x00007fe748e7dc91 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQt5Widgets.so.5
#61 0x00007fe747947270 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /usr/lib/libQt5Core.so.5
#62 0x00007fe748e7cc1a in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) () from /usr/lib/libQt5Widgets.so.5
#63 0x00007fe748ed0e47 in ?? () from /usr/lib/libQt5Widgets.so.5
#64 0x00007fe748ed3830 in ?? () from /usr/lib/libQt5Widgets.so.5
#65 0x00007fe748e75d3c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQt5Widgets.so.5
#66 0x00007fe748e7d716 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQt5Widgets.so.5
#67 0x00007fe747947270 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /usr/lib/libQt5Core.so.5
#68 0x00007fe74866c644 in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) ()
   from /usr/lib/libQt5Gui.so.5
#69 0x00007fe74866e196 in QGuiApplicationPrivate::processWindowSystemEvent(QWindowSystemInterfacePrivate::WindowSystemEvent*) ()
   from /usr/lib/libQt5Gui.so.5
#70 0x00007fe748645c1c in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) ()
Comment 1 Friedrich W. H. Kossebau 2017-11-30 02:23:30 UTC
Git commit 38b1ff67e6d4a3fc590b3dbff88ee5617a363076 by Friedrich W. H. Kossebau.
Committed on 30/11/2017 at 02:22.
Pushed by kossebau into branch 'Applications/17.12'.

Fix crash on re-enabling "Document Preview" plugin

M  +4    -1    addons/preview/ktexteditorpreviewview.cpp

https://commits.kde.org/kate/38b1ff67e6d4a3fc590b3dbff88ee5617a363076