Fix crash on re-enabling "Document Preview" plugin

BUG: 387233